--- a/public/forms.html
+++ b/public/forms.html
@@ -9,8 +9,9 @@
 </head>
 <body>
 <h1>Forms Demo</h1>
-<form action="http://localhost:9999">
+<form action="http://localhost:9999" method="post">
   <input name="login" placeholder="Login">
+  <input name="login" placeholder="Login second">
   <input name="password" type="password" placeholder="Password">
   <button>Login</button>
 </form>
