добавлена проверка на наличие запрошенного файла

--- a/public/forms.html
+++ b/public/forms.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <h1>Forms Demo</h1>
-<form action="http://localhost:9999" method="post">
+<form action="http://localhost:9999?test_param=p1" method="post">
   <input name="login" placeholder="Login">
   <input name="login" placeholder="Login second">
   <input name="password" type="password" placeholder="Password">
